<resources>
    <string name="app_name">JoinSports</string>
    <string name="main_activity_tv_welcome_headline">Herzlich willkommen bei JoinSports!</string>
    <string name="main_activity_bt_user">User erstellen</string>
    <string name="main_activity_login">Login</string>

    <string name="title_activity_create_user">Create User</string>


    <string name="create_user_tv_instruction">Bitte füllen Sie nachfolgende Felder aus!</string>
    <string name="create_user_tf_username">Benutzername</string>
    <string name="create_user_tf_password">Passwort</string>
    <string name="create_user_tf_password_repeat">Passwort wiederholen</string>
    <string name="create_user_tf_firstname">Vorname</string>
    <string name="create_user_tf_lastname">Nachname</string>
    <string name="create_user_tf_email">Email</string>
    <string name="create_user_bt_create_user">User erstellen</string>

    <string name="login_user_tv_instruction">Bitte geben Sie Ihre Login-Daten ein!</string>
    <string name="login_user_tf_username">Benutzername</string>
    <string name="login_user_tf_password">Passwort</string>
    <string name="login_user_bt_login_user">Einloggen</string>

    <string name="update_user_bt_update_user">Accountdaten übernehmen</string>
    <string name="create_team_tv_headline">Team erstellen</string>
    <string name="create_team_tf_teamname">Teamname</string>
    <string name="create_team_bt_create_team">Team erstellen</string>

    <!-- Test -->
    <string name="menu_item_home">Home</string>
    <string name="menu_item_help">Help</string>

    <!-- NavigationDrawer Activity -->
    <string name="title_activity_navigation_drawer">JoinSports</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="read_user_tf_username">Benutzername</string>
    <string name="read_user_tf_firstname">Vorname</string>
    <string name="read_user_tf_lastname">Nachname</string>
    <string name="read_user_tf_emailaddress">Email-Adresse</string>
    <string name="read_user_bt_editprofile">Profil bearbeiten</string>
    <string name="update_user_bt_commitChanges">Änderungen übernehmen</string>
    <string name="update_user_bt_abortChanges">Abbrechen</string>
    <string name="update_user_tf_emailAddress">Email-Adresse</string>
    <string name="update_user_tv_oldPassword">Altes Passwort</string>
    <string name="update_user_tv_newPassword">Neues Passwort</string>
    <string name="update_user_tv_oldPasswordRepeat">Neues Passwort wiederholen</string>
    <string name="update_user_tv_emailAddress">Neue Email-Adresse</string>
    <string name="update_user_tv_emailAddressRepeat">Neue Email-Adresse wiederholen</string>
    <string name="nav_read_user" >Mein Profil</string>
    <string name="nav_read_all_unjoined_teams">Teams finden</string>
    <string name="read_all_unjoined_teams_bt_createTeam">Neues Team erstellen</string>
    <string name="read_all_unjoined_teams_tv_instructions">Mitglied eines Teams werden</string>
    <string name="join_team_tv_headline">Mitglied des Teams werden</string>
    <string name="join_team_bt_joinTeam">Mitglied werden</string>
    <string name="join_team_bt_abort">Abbrechen</string>
    <string name="join_team_tv_teamTag">Team</string>
</resources>
