<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.joinsports.joinsports.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_tv_headline"
        android:layout_marginTop="17dp"
        android:textStyle="bold"
        tools:typeface="sans"
        android:textSize="@dimen/font_size_welcome_headline"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/main_activity_tv_welcome_headline" />

    <ImageView
        android:id="@+id/main_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@android:drawable/picture_frame" />

    <Button
        android:id="@+id/main_bt_create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:onClick="onClick_gotoCreateUser"
        android:text="@string/main_activity_bt_user" />

    <Button
        android:text="@string/main_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_bt_login"
        android:onClick="onClick_gotoLoginUser"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp"
        android:elevation="0dp"
        android:layout_alignBaseline="@+id/main_bt_create_user"
        android:layout_alignBottom="@+id/main_bt_create_user"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
